# voice-assistant-web

./: .gitignore  app.py  pyproject.toml  requirements.txt
static/: pcm-worklet.js
templates/: index.html
